# cads-obs-catalogue-manager

./: .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  environment-retrieve.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cdm-check.yml  on-push.yml
cdsobs/: __init__.py  api.py  config.py  constants.py  constraints.py  forms_jsons.py  metadata.py  netcdf.py  sanity_checks.py  storage.py
cdsobs/api_rest/: app.py  config_helper.py  endpoints.py  main.py  models.py
cdsobs/cdm/: api.py  check.py  code_tables.py  denormalize.py  lite.py  mappings.py  tables.py
cdsobs/cli/: _catalogue_explorer.py  _copy_dataset.py  _delete_dataset.py  _deprecate_version.py  _enable_version.py  _get_forms_jsons.py  _make_cdm.py  _make_production.py  _object_storage.py  _retrieve.py  _utils.py  _validate.py  app.py
cdsobs/data/: cdsobs_config_template.yml
cdsobs/data/insitu-comprehensive-upper-air-observation-network/: active.json  service_definition.json  service_definition.yml  service_definition_old.yml
cdsobs/data/insitu-observations-gnss/: service_definition.json  service_definition.yml  service_definition_old.yml
cdsobs/data/insitu-observations-gruan-reference-network/: service_definition.json  service_definition.yml  service_definition_old.yml  service_definition_simplified.yml
cdsobs/data/insitu-observations-igra-baseline-network/: service_definition.json  service_definition.yml  service_definition_old.yml
cdsobs/data/insitu-observations-ndacc/: service_definition.json  service_definition.yml
cdsobs/data/insitu-observations-near-surface-temperature-us-climate-reference-network/: service_definition.json  service_definition.yml  service_definition_old.yml
cdsobs/data/insitu-observations-woudc-netcdfs/: service_definition.json  service_definition_old.yml
cdsobs/data/insitu-observations-woudc-ozone-total-column-and-profiles/: service_definition.json  service_definition.yml
cdsobs/ingestion/: api.py  core.py  merge.py  notify.py  partition.py  serialize.py
cdsobs/ingestion/readers/: csv.py  cuon.py  netcdf.py  parquet.py  sql.py
cdsobs/observation_catalogue/: database.py  models.py
cdsobs/observation_catalogue/repositories/: base.py  base_repository.py  cads_dataset.py  catalogue.py  dataset.py  dataset_version.py
cdsobs/observation_catalogue/schemas/: cads_dataset.py  catalogue.py  constraints.py  version_schema.py
cdsobs/retrieve/: api.py  filter_datasets.py  models.py  retrieve_services.py
cdsobs/service_definition/: api.py  service_definition_models.py  utils.py  validation.py
cdsobs/utils/: exceptions.py  logutils.py  types.py  utils.py
docker/: Dockerfile  docker-compose.yml
docs/: conf.py  index.html  index.md
tests/: conftest.py  http_api.py  test_00_version.py  test_api.py  test_cdm_api.py  test_cdm_api_extra.py  test_config.py  test_dataset_metadata.py  test_denormalize_tables.py  test_generate_woudc_netcdfs.py  test_get_forms_jsons.py  test_http_api.py  test_ingestion.py  test_merge_with_existing_partition.py  test_notify.py  test_read_cdm_tables.py  test_read_csv.py  test_read_cuon.py  test_read_parquet.py  test_run_sanity_checks.py  test_service_definition.py  test_storage.py  test_to_storage.py  upgrade_service_definition.py  utils.py
tests/cli/: test_app.py  test_catalogue_explorer.py  test_copy_delete_dataset.py  test_object_storage.py
tests/data/: cdsobs_config_test.yml  partition.pkl
tests/data/csv_data/: cdm_core_r7.0_ZIM00067976.psv
tests/data/cuon_data/: active.json
tests/data/parquet_data/: test_insitu-observations-surface-land_hourly_2001_9.parquet
tests/docker/: docker-compose.yml
tests/observation_catalogue/: test_catalogue.py  test_constraints.py
tests/retrieve/: test_adaptor.py  test_api.py  test_retrieve_services.py
tests/scripts/: add_vars_to_cuon_service_definition.py  copy_catalogue.py  cuon_analysis.py  fix_cuon.py  generate_test_flat_netcdfs.py  gnss_tables.txt  make_gnss_ingestiondb.sh  make_load_test_csv.py  make_production.sh  make_test_ingestiondb.sh  migrate_to_version.py  profile_test.sh  run_load_test.py  subset_cuon_file.py  tables_to_copy.txt  upgrade_service_definition.py  upgrade_service_definition_v2.py  validate_all_service_definitions.sh
tests/system/: 1_year_benchmarks.py  README.md  check_missing_variables.py  run_sanity_checks.py
