[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "aiohttp",
  "boto3==1.34.0",
  "connectorx",
  "cryptography",
  "dask",
  "duckdb",
  "fastapi",
  "fsspec",
  "h5netcdf",
  "httpx",
  "netCDF4",
  "pandas<3",
  "psycopg2-binary",
  "pydantic",
  "pydantic_core",
  "pydantic-settings",
  "python-dotenv",
  "pydantic_extra_types",
  "requests",
  "semver",
  "SQLAlchemy",
  "sqlalchemy_json",
  "structlog",
  "tenacity",
  "typer",
  "uvicorn",
  "xarray",
  "PyYAML"
]
description = "CopDS Observation Repository Catalogue Manager"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cdsobs"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
dev = [
  "pre_commit==4.2.0",
  "pytest-cov==6.1.1",
  "pytest-mock==3.14.1"
]
docs = [
  "Sphinx==8.2.3",
  "sphinx-autoapi==3.5.0",
  "myst-parser==4.0.1",
  "pydata-sphinx-theme==0.16.1"
]
types = [
  "types-python-dateutil==2.9.0.20250516",
  "types-PyYAML==6.0.12.20250516",
  "types-requests==2.32.4.20250611",
  "types-setuptools==80.9.0.20250529"
]

[project.scripts]
cadsobs = "cdsobs.cli.app:main"

[tool.black]
target-version = ['py310']

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[tool.mypy]
exclude = 'tests/docker'
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = false
log_level = "INFO"
norecursedirs = [
  'tests/docker'
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["cdsobs"]

[tool.setuptools_scm]
write_to = "cdsobs/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
